# clipgen

./: .gitignore  README.md  pyproject.toml
clipgen/: __init__.py  audio.py  cli.py  engine.py  render.py  subtitles.py  utils.py
clipgen/templates/: __init__.py  code_diff.py  comparison.py  cta.py  question.py  terminal.py  title.py
examples/: cursor_vs.yaml  hello.yaml  promo.yaml
