[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clipgen"
version = "0.1.1"
description = "Short video auto generator — AI配音+字幕+画面一键生成短视频"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "JerryX"},
]
keywords = ["video", "generator", "tts", "subtitle", "douyin", "short-video", "clip"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Pillow>=10.0",
    "edge-tts>=6.0",
    "imageio-ffmpeg>=0.5",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/JerryX2026/clipgen"
Source = "https://github.com/JerryX2026/clipgen"

[project.scripts]
clipgen = "clipgen.cli:main"
